2009-02-19  Ali Sabil  <ali.sabil@gmail.com>

	* vapigen/valagidlparser.vala:

	Support to_string attribute for enums

2009-02-19  Ali Sabil  <ali.sabil@gmail.com>

	* vapi/packages/gstreamer-rtp-0.10/:

	Fix gst_rtp_buffer_get_extension_data binding

	* vapi/gstreamer-rtp-0.10.vapi: regenerated

2009-02-19  Ali Sabil  <ali.sabil@gmail.com>

	* vapi/glib-2.0.vapi:

	Add byte order conversion methods to int types

2009-02-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/pango/:

	Fix pango_font_description_from_string binding and support implicit
	copies of PangoFontDescription

	* vapi/pango.vapi: regenerated

2009-02-18  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valaassignment.vala:
	* vala/valacodevisitor.vala:
	* vala/valacodewriter.vala:
	* vala/valagenieparser.vala:
	* vala/valaparenthesizedexpression.vala:
	* vala/valaparser.vala:
	* vala/valasymbolresolver.vala:
	* vala/valaunaryexpression.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemodule.vala:

	Remove ParenthesizedExpression to simmplify AST

2009-02-18  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_tree_view_insert_column_with_data_func binding

	* vapi/gtk+-2.0.vapi: regenerated

2009-02-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodcallmodule.vala:

	Support chaining up to constructors in generic classes,
	fixes bug 567319

2009-02-17  Ali Sabil  <ali.sabil@gmail.com>

	* vapigen/valagidlparser.vala:

	Support takes_ownership attribute for delegate parameters

2009-02-17  Ali Sabil  <ali.sabil@gmail.com>

	* vapi/gstreamer-rtp-0.10.vapi: regenerated

2009-02-16  Ali Sabil  <ali.sabil@gmail.com>

	* vala/valacodewriter.vala: escape the dynamic keyword, and identifiers
	starting with a digit

2009-02-17  Ryan Lortie  <desrt@desrt.ca>

	* gobject/valaccodebasemodule.vala:
	* vala/valacodewriter.vala:
	* vala/valastruct.vala:
	* vapigen/valagidlparser.vala:
