@@ -7,6 +7,8 @@ GstBaseSrc cheader_filename="gst/base/gstbasesrc.h"
 GstBaseTransform.priv hidden="1"
 GstBaseTransform cheader_filename="gst/base/gstbasetransform.h"
 GstBin.priv hidden="1"
+GstBin.children type_arguments="Pad"
+GstBin.messages type_arguments="Message"
 gst_bin_add.element value_owned="1"
 gst_bin_add_many hidden="1"
 gst_bin_remove_many ellipsis="1"
@@ -54,7 +56,12 @@ GstClockTime hidden="1"
 GstClockTimeDiff hidden="1"
 GstControlSource.get_value hidden="1"
 GstControlSource.get_value_array hidden="1"
+GstDebugLevel to_string="gst_debug_level_get_name"
+gst_debug_level_get_name hidden="1"
 GstElement::no_more_pads has_emitter="1"
+GstElement.pads type_arguments="Pad"
+GstElement.sinkpads type_arguments="Pad"
+GstElement.srcpads type_arguments="Pad"
 GstElementClass name="pointer"
 gst_element_add_pad.pad takes_ownership="1"
 gst_element_link_many ellipsis="1"
@@ -67,11 +74,15 @@ gst_element_query_duration.format is_ref="1"
 gst_element_query_duration.duration is_out="1"
 gst_element_query_position.format is_ref="1"
 gst_element_query_position.cur is_out="1"
+gst_element_request_new_pad.name nullable="1"
 gst_element_send_event.event takes_ownership="1"
+gst_element_state_get_name hidden="1"
+gst_element_state_change_return_get_name hidden="1"
 gst_element_get_bus transfer_ownership="1"
 gst_element_make_from_uri transfer_ownership="1" nullable="1"
 gst_element_make_from_uri.elementname nullable="1"
 gst_element_get_static_pad transfer_ownership="1" nullable="1"
+gst_element_class_get_pad_template_list type_arguments="Pad"
 GstElementDetails is_value_type="1"
 gst_element_factory_make transfer_ownership="1" nullable="1"
 gst_element_factory_make.name nullable="1"
@@ -80,6 +91,7 @@ gst_element_factory_create.name nullable="1"
 GstEvent base_class="GstMiniObject"
 GstEvent.mini_object hidden="1"
 GstEventClass hidden="1"
+GstEventType to_string="gst_event_type_get_name"
 gst_event_new_custom.structure takes_ownership="1"
 gst_event_new_navigation.structure takes_ownership="1"
 gst_event_parse_buffer_size.format is_out="1"
@@ -111,6 +123,11 @@ gst_event_parse_seek.start is_out="1"
 gst_event_parse_seek.stop_type is_out="1"
 gst_event_parse_seek.stop is_out="1"
 gst_event_parse_tag.taglist is_out="1" value_owned="1"
+gst_event_type_get_name hidden="1"
+GstFlowReturn to_string="gst_flow_get_name"
+gst_flow_get_name hidden="1"
+GstFormatReturn to_string="gst_format_get_name"
+gst_format_get_name hidden="1"
 GstFormatDefinition is_value_type="1"
 GstGhostPad base_class="GstPad"
 GstGhostPadClass hidden="1"
@@ -124,7 +141,11 @@ GstMessage base_class="GstMiniObject"
 GstMessage.mini_object hidden="1"
 GstMessageClass base_class="GstMiniObjectClass"
 GstMessageClass.mini_object_class hidden="1"
+GstMessageType to_string="gst_message_type_get_name"
 gst_message_make_writable hidden="1"
+gst_message_new_application.structure takes_ownership="1"
+gst_message_new_custom.structure takes_ownership="1"
+gst_message_new_element.structure takes_ownership="1"
 gst_message_new_error throws="0"
 gst_message_new_info throws="0"
 gst_message_new_warning throws="0"
@@ -150,6 +171,7 @@ gst_message_parse_segment_start.position is_out="1"
 gst_message_parse_segment_done.format is_out="1"
 gst_message_parse_segment_done.position is_out="1"
 gst_message_parse_tag.tag_list is_out="1" value_owned="1"
+gst_message_type_get_name hidden="1"
 GstMiniObject is_fundamental="1"
 GstMiniObject.instance hidden="1"
 GstMiniObjectClass base_class="GTypeClass"
@@ -162,6 +184,7 @@ gst_class_signal_connect hidden="1"
 gst_class_signal_emit_by_name hidden="1"
 gst_object_get_name transfer_ownership="1"
 gst_object_get_name_prefix transfer_ownership="1"
+gst_object_get_parent transfer_ownership="1"
 gst_object_get_path_string transfer_ownership="1"
 gst_object_sink hidden="1"
 gst_object_ref hidden="1"
@@ -174,6 +197,10 @@ gst_pad_add_data_probe_full hidden="1"
 gst_pad_add_event_probe hidden="1"
 gst_pad_add_event_probe_full hidden="1"
 gst_pad_chain.buffer takes_ownership="1"
+GstPadChainFunction.buffer takes_ownership="1"
+GstPadEventFunction.event takes_ownership="1"
+GstPadBufferAllocFunction.buf takes_ownership="1"
+GstPadGetRangeFunction.buffer takes_ownership="1"
 gst_pad_get_allowed_caps transfer_ownership="1"
 gst_pad_get_caps transfer_ownership="1"
 gst_pad_get_negotiated_caps transfer_ownership="1"
@@ -199,6 +226,7 @@ GstQuery base_class="GstMiniObject"
 GstQuery.mini_object hidden="1"
 GstQueryClass base_class="GstMiniObjectClass"
 GstQueryClass.mini_object_class hidden="1"
+GstQueryType to_string="gst_query_type_get_name"
 gst_query_make_writable hidden="1"
 gst_query_parse_convert.src_format is_out="1"
 gst_query_parse_convert.src_value is_out="1"
@@ -221,6 +249,7 @@ gst_query_parse_segment.rate is_out="1"
 gst_query_parse_segment.format is_out="1"
 gst_query_parse_segment.start_value is_out="1"
 gst_query_parse_segment.stop_value is_out="1"
+gst_query_type_get_name hidden="1"
 gst_registry_feature_filter.filter delegate_target_pos="2.1"
 gst_registry_feature_filter transfer_ownership="1" type_arguments="PluginFeature"
 gst_registry_get_feature_list transfer_ownership="1" type_arguments="PluginFeature"
@@ -235,6 +264,8 @@ gst_registry_plugin_filter transfer_ownership="1" type_arguments="Plugin"
 gst_segment_clip.clip_start is_out="1"
 gst_segment_clip.clip_stop is_out="1"
 gst_segment_copy transfer_ownership="1"
+GstState to_string="gst_element_state_get_name"
+GstStateChangeReturn to_string="gst_element_state_change_return_get_name"
 GstStaticCaps is_value_type="1"
 GstStaticCaps.caps hidden="1"
 gst_static_caps_get transfer_ownership="1"
@@ -244,6 +275,8 @@ gst_static_pad_template_get_caps transfer_ownership="1"
 GstStructure is_immutable="1"
 gst_structure_copy transfer_ownership="1"
 gst_structure_new ellipsis="1"
+gst_structure_empty_new hidden="1"
+gst_structure_id_empty_new hidden="1"
 gst_structure_from_string nullable="1" transfer_ownership="1"
 gst_structure_from_string.end is_out="1"
 gst_structure_set ellipsis="1"
